# 6G-Federated-IDs

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-project-foundation-and-data-pipeline/: 01-01-PLAN.md  01-VALIDATION.md
.planning/phases/02-model-definition-and-local-training/: 02-UAT.md
.planning/phases/03-federated-learning-infrastructure/: 03-VERIFICATION.md
.planning/phases/04-evaluation-and-visualization/: 04-01-PLAN.md  04-01-SUMMARY.md  04-VALIDATION.md
.planning/phases/05-integration-and-polish/: 05-01-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-verify-phase1-requirements/: 06-01-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-verify-phase4-and-integration-fixes/: 07-01-PLAN.md  07-VERIFICATION.md
.planning/phases/08-security-integrity/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: default.yaml
scripts/: generate_example_plots.py  verify_phase1.py  verify_phase4.py
src/federated_ids/: __init__.py  config.py  device.py  exceptions.py  pipeline.py  seed.py
tests/: conftest.py  test_config.py  test_eval.py  test_fl.py  test_integration.py  test_loader.py  test_model.py  test_partition.py  test_preprocess.py  test_security.py  test_train.py
(+63 files in other folders)
