[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-ids-6g"
version = "0.1.0"
description = "Privacy-preserving Federated Learning IDS for 6G Edge Networks"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
"PyYAML>=6.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
federated-ids-preprocess = "federated_ids.data.preprocess:main"
federated-ids-train = "federated_ids.model.train:standalone_train"
federated-ids-train-fl = "federated_ids.fl.__main__:main"
federated-ids-evaluate = "federated_ids.eval.__main__:main"
federated-ids-run-all = "federated_ids.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
